--- a/generator/classes/propel/engine/builder/om/todo.txt
+++ b/generator/classes/propel/engine/builder/om/todo.txt
@@ -1,11 +1,11 @@
-
 - Make the getPackage() methods always return the current package of the class being built.
 This will mean we'll probably need a getBasePackage() which is the package that the user
 specifies in the schema or in ${propel.targetPackage} prop.
-
-- Investigate whether to make some convience methods for factory:  getNewPeerBuilder() rather than factoryBuilder('peer').
-If not, then at least make some constants (e.g. DataModelBuilder::PEER_BUILDER) so we don't have to rely on raw strings
-to instnatiate classes. 
+*** This should now be done, but has not been tested.  Instead of getBasePackage() we now have methods
+like getPeerBuilder() that will return the [base] peer builder class and getStubPeerBuilder() which will
+return a stub peer builder.  That way we can quickly get classnames, packages, etc. from other members of
+the builder family.
 
 - Add error handling to the builderFactory() method so we can properly flag failures to load those files.
-
+*** There is currently error handling in Phing::import() to flag inability to load classes.  We may need to 
+add some better error messages in the builderFactor() specifically.
