Added a note about broken builderFactory to todo.txt
git-svn-id: http://propel.mirror.svn.symfony-project.com/trunk@139 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/classes/propel/engine/builder/om/todo.txt
+++ b/generator/classes/propel/engine/builder/om/todo.txt
@@ -9,3 +9,4 @@ the builder family.
 - Add error handling to the builderFactory() method so we can properly flag failures to load those files.
 *** There is currently error handling in Phing::import() to flag inability to load classes.  We may need to 
 add some better error messages in the builderFactor() specifically.
+*** builderFactory is broken anyway since it's using Phing::import($clazz); with $clazz not being defined anywhere [David]
