Getting ready for 1.1.1
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.1@205 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/CHANGELOG
+++ b/generator/CHANGELOG
@@ -2,6 +2,10 @@
   P R O P E L    C H A N G E S
   ============================
 
+ September 17, 2005 - 1.1.1
+
+  Due to popular demand, the 1.1.1 release introduces compatibility with Phing 2.1.0-final. It does not contain any new features.
+
  April 7, 2005 - 1.1.0
 	
   Big Changes:
