Added entry for 1.2.1 to CHANGELOG
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.2@597 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/CHANGELOG
+++ b/generator/CHANGELOG
@@ -1,7 +1,12 @@
 
   P R O P E L    C H A N G E S
   ============================
-
+ 
+ Mar 3, 2007 - 1.2.1
+ 
+  See ChangeLog for 1.2.1 at http://propel.phpdb.org/trac/report/9
+ 
+ 
  Aug 31, 2006 - 1.2.0
 
   Breaking Changes:
