Updated CHANGELOG URL for 1.2.1
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.2@598 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/CHANGELOG
+++ b/generator/CHANGELOG
@@ -4,7 +4,7 @@
  
  Mar 3, 2007 - 1.2.1
  
-  See ChangeLog for 1.2.1 at http://propel.phpdb.org/trac/report/9
+  ChangeLog for 1.2.1 at http://propel.phpdb.org/trac/query?status=closed&milestone=1.2.1&resolution=fixed&order=priority
  
  
  Aug 31, 2006 - 1.2.0
