[1.5] modified README for tests to accomodate changes in r1433
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1462 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/README
+++ b/test/README
@@ -70,7 +70,7 @@ propel.database.password = p@ssw0rd
 
 {{{
 > cd /path/to/propel/test
-> ../generator/bin/propel-gen fixtures/bookstore
+> ../generator/bin/propel-gen fixtures/bookstore main
 > mysqladmin create test
 > ../generator/bin/propel-gen fixtures/bookstore insert-sql
 }}}
