[1.5] Introducing Model Namespaces (PHP 5.3 only) (WIP) (refs #683)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1781 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/test/README
+++ b/test/README
@@ -75,6 +75,8 @@ propel.database.password = p@ssw0rd
 > ../generator/bin/propel-gen fixtures/bookstore insert-sql
 }}}
 
+**Tip**: To run the unit tests for the namespace support in PHP 5.3, you must also build the `fixtures/namespaced` project.
+
 == Run the Unit Tests ==
 
 Run all the unit tests at once using Phing:
