[1.5] Preparing the 1.5.3 release
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.5@1913 84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,55 @@
 = Changelog Of The Propel 1.5 Branch =
 
+== 2010-08-16: Version 1.5.3 ==
+
+ * [1912] Fixed incorrect test syntax (niklas) (closes #1092)
+ * [1911] Fixed `NamespaceTest` in PostgreSQL (niklas) (refs #1089)
+ * [1910] Fixed single table inheritance when using packages (closes #1091)
+ * [1909] Moved DELETE sql code service to `BasePeer` (niklas) (closes #1090)
+ * [1906] Fixed concrete table inheritance duplicates parent entries on fixture load (chris) (closes #1054)
+ * [1904] Replaced `MssqlDateTime.class.php` as it is still required when using `pdo_dblib` (KRavEN) (Closes #1045)
+ * [1899] Added `ModelCriteria::groupByClass()` to ease the use of aggregate functions with PostgreSQL (closes #1022)
+ * [1898] Fixed all formatters when dealing with joined hydration of objects linked by a custom relation name (closes #1076, #977)
+ * [1895] Fixed typo in `PropelOnDemandFormatter` that makes in fail with single table inheritance (closes #1078)
+ * [1893] Fixed unit tests that were failing for a lack of order by clause (refs #991)
+ * [1881] Fixed typo in behaviors doc (refs #1046)
+ * [1880] Fixed generated useFkQuery() to allow subsequent use of with() (based on a patch by ngnpope) (closes #1035)
+ * [1879] Fixed test failing for the wrong reason (refs r1873)
+ * [1876] ordering classmap by classname, to avoid discrepancies due to OS/Phing differences
+ * [1873] Added tests for `PDOStatement::fetch()` after `PDO::commit()` PDO driver support (KRavEN)
+ * [1872] added md5 of binary file contents to prevent cli terminal issues when assertEquals fails (KRavEN)
+ * [1868] added md5 of binary file contents to prevent cli terminal issues when assertEquals fails (KRavEN)
+ * [1866] Added a warning for unit tests without PHP 5.3 (closes #1056)
+ * [1863] Fixed generated nested_set getter and setter when the scope column is called "scope_value" (closes #1051)
+ * [1857] Fixed generated nested_set getter and setter when the level column is called "level" (closes #1051)
+ * [1856] Improved composite FK getter to use instance pool (ArnaudD) (closes #1011)
+ * [1855] fixed a typo (refs #991)
+ * [1854] added `PropelSimpleArrayFormatter` to docs (refs #991)
+ * [1853] moved `ModelCriteria::select()` docs. removed `ModelCriteriaSelectTests` that would always fail (refs #991)
+ * [1851] Refactored `ModelCriteria::select()` tests (refs #991)
+ * [1850] Fixed coding standards in `ModelCriteria::select()` (refs #991)
+ * [1849] Using `mb_strlen()` instead of `strlen()` in validators when available (closes #1038)
+ * [1848] Fixed two step single table inheritance (closes #1033)
+ * [1847] Fixed missing parameter in `auto_add_pk` behavior documentation (ngnpope) (closes #1048)
+ * [1846] fixed `ModelCriteria::select()` documentation formatting. (refs #991)
+ * [1845] added `ModelCriteria::select()` documentation. (refs #991)
+ * [1844] Resolved whitespace descrepancies. (refs #986, #991) (closes #1045)
+ * [1843] initial support for `pdo_sqlsrv`. (refs #986)
+ * [1842] added `ModelCriteria::select()` implementation. (refs #991)
+ * [1841] Added proper `DBMSSQL::getTimestampFormatter()`. Removed obsolete `MssqlDateTime.class.php`. (closes #1045)
+ * [1839] Allowed behaviors to add classes (refs #1046)
+ * [1838] Made `DebugPDOStatement` able to log calls to `bindParam()` (based on a patch by ddalmais)
+ * [1832] Made nested set behavior faster by allowing the use of smart index in `branchOf()` and `descendentsOf()` (patch from Wicked) (closes #1034)
+ * [1831] Fixed `ModelCriteria::addJoin()` behaves differently than `Criteria::addJoin()` (closes #1041)
+ * [1826] Fixed namespaced tests that were falling since r1815
+ * [1821] documented the `namespace.autoPackage` build property (refs #1005)
+ * [1820] Allowed custom `BaseObject` classes to define their own `__call()` defaults (closes #1029)
+ * [1819] failing loudly instead of deleting too many results when doDelete() is called on a Criteria with join (closes #1030)
+ * [1818] Fixed `populateRelation()` documentation (closes #1023)
+ * [1817] Fixed issue with `classPrefix` and timestampable behavior (closes #1027)
+ * [1816] Fixed `filterByPrimaryKeys()` when passed an empty array with composite pks, made populateRelation() smarter when dealing with empty collections (closes #1025)
+ * [1815] Fixed regression in SQL build (`mysql.tableType` build property was not used anymore)
+
 == 2010-06-17: Version 1.5.2 ==
 
  * [1810] Changed default table type keyword to ENGINE for MySQL (closes #969)
